Fix dark mode input CSS (#113)

--- a/static/css/tailwind-custom.css
+++ b/static/css/tailwind-custom.css
@@ -7,6 +7,10 @@
         @apply flex cursor-pointer items-center px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-green-600
     }
 
+    .text-input {
+        @apply w-full rounded-lg bg-gray-100 px-4 py-2 dark:bg-gray-900
+    }
+
     .pagination-ellipsis {
         @apply inline-flex items-center px-4 py-2 text-sm border border-gray-300 select-none
     }
